@@ -1980,7 +1980,7 @@ A [[Special:WhatLinksHere/$2|full list]] is available.',
 'nolinkstoimage'                 => 'There are no pages that link to this file.',
 'morelinkstoimage'               => 'View [[Special:WhatLinksHere/$1|more links]] to this file.',
 'redirectstofile'                => 'The following {{PLURAL:$1|file redirects|$1 files redirect}} to this file:',
-'duplicatesoffile'               => 'The following {{PLURAL:$1|file is a duplicate|$1 files are duplicates}} of this file:',
+'duplicatesoffile'               => 'The following {{PLURAL:$1|file is a duplicate|$1 files are duplicates}} of this file ([[Special:FileDuplicateSearch/$2|more details]]):',
 'sharedupload'                   => 'This file is a shared upload and may be used by other projects.',
 'shareduploadwiki'               => 'Please see the $1 for further information.',
 'shareduploadwiki-desc'          => 'The description on its $1 on the shared repository is shown below.',
@@ -1993,7 +1993,6 @@ A [[Special:WhatLinksHere/$2|full list]] is available.',
 'noimage'                        => 'No file by this name exists, but you can $1.',
 'noimage-linktext'               => 'upload one',
 'uploadnewversion-linktext'      => 'Upload a new version of this file',
-'imagepage-searchdupe'           => 'Search for duplicate files',
 
 # File reversion
 'filerevert'                => 'Revert $1',
